cart page added

--- a/client/src/components/Hero/style.css
+++ b/client/src/components/Hero/style.css
@@ -9,3 +9,29 @@
   overflow-x: hidden;
 }
 
+
+.link{
+    position: relative,
+   
+  
+}
+
+.link::before{
+    
+        content: '';
+        position: absolute;
+        width: 0;
+        height: 2px;
+        bottom: -3px;
+        left: 50%;
+        transform: translate(-50%,0%);
+        background-color: #1976d2;
+        visibility: hidden;
+        transition: all 0.3s ease-in-out;
+     
+}
+.link:hover::before {
+    visibility: visible;
+    width: 100%;
+  
+}
